--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -119,21 +119,21 @@ body
 
 .fancy-grid
   user-select: none
-  .selected
+  .ft-cell-selected
     background-color #E9F3FF
-  .selected-left
+  .ft-cell-selected-left
     border-left 1px solid #0086F8
-  .selected-right
+  .ft-cell-selected-right
     border-right 1px solid #0086F8
-  .selected-top
+  .ft-cell-selected-top
     border-top 1px solid #0086F8
     .ft-cell-content
       padding-top 7px
-  .selected-bottom
+  .ft-cell-selected-bottom
     border-bottom 1px solid #0086F8
     .ft-cell-content
       padding-bottom 7px
-  .active
+  .ft-cell-active
     border 2px solid #0086F8
     .ft-cell-content
       padding-bottom 6px
