--- a/bin/basic.css
+++ b/bin/basic.css
@@ -118,12 +118,14 @@ body {
   display: inline-block;
   margin-right: 5px;
   position: relative;
+  -webkit-transition: -webkit-transform 300ms;
   transition: -webkit-transform 300ms;
   transition: transform 300ms;
   transition: transform 300ms, -webkit-transform 300ms;
 }
 .col-0 .ft-row-expanded .ft-cell-content:before {
   -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
           transform: rotate(90deg);
 }
 .col-0 .ft-row-indent-1 .ft-cell-content {
